added pricng and touched up mobile paghe

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,7 +123,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-bg-secondary"></div>
+      <div class="absolute inset-0 bg-white dark:bg-page"></div>
     </Fragment>
   </Content>
 
@@ -340,7 +340,7 @@ const metadata = {
     ]}
   >
     <Fragment slot="bg">
-      <div class="absolute inset-0 bg-bg-secondary"></div>
+      <div class="absolute inset-0 bg-white dark:bg-page"></div>
     </Fragment>
   </FAQs>
 
